@@ -6,6 +6,7 @@ use warnings;
 use ExtUtils::MakeMaker;
 
 # Pod::Simple 3.09 first shipped with Perl 5.11.2
+# JSON::PP 2.27103 first shipped with Perl 5.13.9
 # Time::Local 1.2 first shipped with Perl 5.13.9
 # IO::Socket::IP 0.26 first shipped with Perl 5.19.8
 WriteMakefile(
@@ -33,6 +34,7 @@ WriteMakefile(
   },
   PREREQ_PM => {
     'IO::Socket::IP' => '0.26',
+    'JSON::PP'       => '2.27103',
     'Pod::Simple'    => '3.09',
     'Time::Local'    => '1.2'
   },
