@@ -1,5 +1,6 @@
 
 6.22  2015-09-24
+  - Improved Mojo::JSON by reusing JSON::PP boolean constants.
 
 6.21  2015-09-23
   - Added val method to Mojo::DOM.
